force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__BIC_Code__c.field-meta.xml
<CustomField>
    <fullName>cpm__BIC_Code__c</fullName>
    <label>BIC Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>