force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__Default_Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>cpm__Default_Payment_Processor__c</fullName>
    <label>Default Payment Processor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>