force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__Default_Target__c.field-meta.xml
<CustomField>
    <fullName>cpm__Default_Target__c</fullName>
    <label>Default Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>