force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__Electronic_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>cpm__Electronic_Sequence_Number__c</fullName>
    <description>A bank provided sequence number.</description>
    <inlineHelpText>A bank provided sequence number.</inlineHelpText>
    <label>Batch Identification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>