force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__Filename__c.field-meta.xml
<CustomField>
    <fullName>cpm__Filename__c</fullName>
    <description>The filename of the processed file</description>
    <inlineHelpText>The filename of the processed file</inlineHelpText>
    <label>Filename</label>
    <length>100</length>
    <type>Text</type>
</CustomField>