force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__Filesize__c.field-meta.xml
<CustomField>
    <fullName>cpm__Filesize__c</fullName>
    <description>populated by code</description>
    <inlineHelpText>Filesize in kb. Used to validate the input</inlineHelpText>
    <label>Filesize</label>
    <length>25</length>
    <type>Text</type>
</CustomField>