force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__Filetype__c.field-meta.xml
<CustomField>
    <fullName>cpm__Filetype__c</fullName>
    <label>Filetype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>