force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__From_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__From_Date__c</fullName>
    <description>The starting date for this CAMT.</description>
    <inlineHelpText>The starting date for this CAMT.</inlineHelpText>
    <label>From Date</label>
    <type>DateTime</type>
</CustomField>