force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__Guided_Matching_Setup__c.field-meta.xml
<CustomField>
    <fullName>cpm__Guided_Matching_Setup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guided Matching Setup</label>
    <referenceTo>cpm__Guided_Matching_Setup__c</referenceTo>
    <relationshipLabel>Transaction Sets</relationshipLabel>
    <relationshipName>Transaction_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>