force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__Nr_Of_Completed__c.field-meta.xml
<CustomField>
    <fullName>cpm__Nr_Of_Completed__c</fullName>
    <formula>cpm__Nr_Of_Matched__c + cpm__Nr_Of_Ignored__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Of Completed Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>