force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__Nr_Of_Guided_Review__c.field-meta.xml
<CustomField>
    <fullName>cpm__Nr_Of_Guided_Review__c</fullName>
    <label># Of Transactions In Guided Review</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>