force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__Nr_Of_Other__c.field-meta.xml
<CustomField>
    <fullName>cpm__Nr_Of_Other__c</fullName>
    <label># Of Transactions With Other Status</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>