force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__Nr_Of_Processing__c.field-meta.xml
<CustomField>
    <fullName>cpm__Nr_Of_Processing__c</fullName>
    <label># Transactions In Processing</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>