force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__Opening_Balance__c.field-meta.xml
<CustomField>
    <fullName>cpm__Opening_Balance__c</fullName>
    <description>The bank account balance at the start of this CAMT file.</description>
    <inlineHelpText>The bank account balance at the start of this CAMT file.</inlineHelpText>
    <label>Opening Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>