force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__ProcessingHub_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__ProcessingHub_Id__c</fullName>
    <description>The Id as the Transaction set is known on the processing Hub.</description>
    <label>ProcessingHub Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>