force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__To_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__To_Date__c</fullName>
    <description>The enddate of this CAMT.</description>
    <inlineHelpText>The enddate of this CAMT.</inlineHelpText>
    <label>To Date</label>
    <type>DateTime</type>
</CustomField>