force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__Total_Amount_Credit_from_file__c.field-meta.xml
<CustomField>
    <fullName>cpm__Total_Amount_Credit_from_file__c</fullName>
    <description>The total amount of the transactions that increased the balance. (incoming money)</description>
    <inlineHelpText>The total amount of the transactions that increased the balance. (incoming money)</inlineHelpText>
    <label>Total Amount Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>