force-app/main/default/objects/cpm__Transaction_Set__c/fields/cpm__Total_Amount_Debit_from_file__c.field-meta.xml
<CustomField>
    <fullName>cpm__Total_Amount_Debit_from_file__c</fullName>
    <description>The total amount of the transactions that decreased the balance. (outgoing money)</description>
    <inlineHelpText>The total amount of the transactions that decreased the balance. (outgoing money)</inlineHelpText>
    <label>Total Amount Debit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>