force-app/main/default/objects/cpm__Transaction_Set__c/listViews/cpm__All.listView-meta.xml
<ListView>
    <fullName>cpm__All</fullName>
    <columns>NAME</columns>
    <columns>cpm__Opening_Balance__c</columns>
    <columns>cpm__Closing_Balance__c</columns>
    <columns>cpm__IBAN__c</columns>
    <columns>cpm__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>