force-app/main/default/objects/cpm__Transaction_Set__c/listViews/cpm__All1.listView-meta.xml
<ListView>
    <fullName>cpm__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>